# scanner

./: .gitignore  CMakeLists.txt  README.md
logic/: CMakeLists.txt
logic/include/: FlagsHandler.hpp  Output.hpp  Scanner.hpp  Utility.hpp
logic/src/: FlagsHandler.cpp  Main.cpp  Output.cpp  Scanner.cpp  Utility.cpp
tests/: CMakeLists.txt
